# plenjos-panel

./: .gitignore  com.plenjos.Panel.json  com.plenjos.Panel.json~  meson.build
data/: com.plenjos.Panel.appdata.xml.in  com.plenjos.Panel.desktop.in  com.plenjos.Panel.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: blur.glsl  main.c  meson.build  panel-applications-menu.c  panel-applications-menu.h  panel-applications-menu.ui  panel-applications-menu.ui~  panel-window.c  panel-window.h  panel-window.ui  panel-window.ui~  panel.gresource.xml  theme.css
src/libplenjadock/: libplenjadock-blur.c  meson.build  plenjadock-application.c  plenjadock-application.h  plenjadock-interface.c  plenjadock-interface.h
